Committing Select Box sizing and changing naming conventions

--- a/src/main/webapp/createCandidate.html
+++ b/src/main/webapp/createCandidate.html
@@ -74,7 +74,7 @@
 								Name</label>
 							<div class="controls">
 								<select id="selectbasic" name="positionName"
-									ng-model="candidate.positionName" class="input-xlarge" required style="color: black">
+									ng-model="candidate.positionName" class="form-control" required style="color: black">
 									<option>Entry Level Engineer</option>
 									<option>Jr.Software Developer</option>
 									<option>Sr.Software Developer</option>
