--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -62,12 +62,12 @@ $(function(){
                 <ul class="nav navbar-nav">
                     <li class=""><a href="login.html" target="_blank">Home</a></li>
 				
-				<li class="dropdown"><a href="User.html" class="dropdown-toggle" 
+				<li class="dropdown"><a href="searchUser.html" class="dropdown-toggle" 
 					data-toggle="dropdown">User <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="User.html" >Create New</a></li>
-						<li><a href="User.html" >Edit</a></li>
-						<li><a href="User.html" >View</a></li>
+						<li><a href="searchUser.html" >Create New</a></li>
+						<li><a href="searchUser.html" >Edit</a></li>
+						<li><a href="searchUser.html" >View</a></li>
 					</ul></li>
 					<li class="dropdown"><a href="createCandidate.html" class="dropdown-toggle" 
 					data-toggle="dropdown">Candidate <b class="caret"></b></a>
