--- a/src/main/webapp/createUser.html
+++ b/src/main/webapp/createUser.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/template.css">
 <link rel="stylesheet" type="text/css" href="css/home.css">
-<script type="text/javascript" src="js/UserRegistration.js"></script>
+<script type="text/javascript" src="js/createUserController.js"></script>
 <script	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
