--- a/src/main/webapp/editUser.html
+++ b/src/main/webapp/editUser.html
@@ -14,7 +14,7 @@
 <script src="https://code.angularjs.org/1.2.26/angular-route.min.js"></script>
 
 
-<script type="text/javascript" src="js/UserRegistration.js"></script>
+<script type="text/javascript" src="js/createUserController.js"></script>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
