--- a/src/main/webapp/searchUser.html
+++ b/src/main/webapp/searchUser.html
@@ -7,7 +7,7 @@
 	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 <script type="text/javascript" src="js/ng-grid-1.3.2.js"></script>
 <link rel="stylesheet" href="css/ng-grid.css" />
-<script type="text/javascript" src="js/viewUserController.js"></script>
+<script type="text/javascript" src="js/searchUserController.js"></script>
 <link rel="stylesheet"
 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/template.css">
