--- a/src/main/webapp/editPosition.html
+++ b/src/main/webapp/editPosition.html
@@ -102,6 +102,7 @@
 							<div class="control-group">
 							<input type="button" class="btn btn-info" ng-click="editPosition()" value=Edit name="post" align="center" style="color: 0000FF;width: 80px"/>
 							<input type="button" class="btn btn-info" ng-click="submit()" value=Update name="post" align="center" style="color: 0000FF"/>
+							<input type="button" class="btn btn-info" ng-click="cancel()" value=Cancel name="post" align="center" style="color: 0000FF"/>
 							</div>
 					</form>
 					</div>
