[Abhijeet] Adding Redirect Page in Edit Position Page

--- a/src/main/webapp/editPosition.html
+++ b/src/main/webapp/editPosition.html
@@ -101,7 +101,7 @@
 							</div><br>
 							<div class="control-group">
 							<input type="button" class="btn btn-info" ng-click="editPosition()" value=Edit name="post" align="center" style="color: 0000FF;width: 80px"/>
-							<input type="button" class="btn btn-info" ng-click="submit()" value=Update name="post" align="center" style="color: 0000FF"/>
+							<input type="button" class="btn btn-info" ng-click="updatePositionDetails()" value=Update name="post" align="center" style="color: 0000FF"/>
 							<input type="button" class="btn btn-info" ng-click="cancel()" value=Cancel name="post" align="center" style="color: 0000FF"/>
 							</div>
 					</form>
