--- a/src/main/webapp/searchCandidate.html
+++ b/src/main/webapp/searchCandidate.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="js/ng-grid-1.3.2.js"></script>
 <link rel="stylesheet" href="css/ng-grid.css" />
 <script type="text/javascript" src="js/searchCandidateController.js"></script>
+<script type="text/javascript" src="js/spinner.js"></script>
 <!-- <link rel="stylesheet"
 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
 <link rel="stylesheet" type="text/css" href="css/template.css">
@@ -50,6 +51,7 @@
 				<br>
 				<div class="gridStyle control-group" ng-grid="gridOptions"></div>
 			</div>
+			<loading></loading>
 		</form>
 	</div>
 
