--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -44,6 +44,7 @@
 				<br>
 				<div class="gridStyle control-group" ng-grid="gridOptions"></div>
 			</div>
+			<loading></loading>
 		</form>
 	</div>
 
