--- a/src/main/webapp/editUser.html
+++ b/src/main/webapp/editUser.html
@@ -128,10 +128,11 @@
 						</select>
 					</div>
 					
-					<div class="form-group">
-						<input type="submit" class="btn btn-info" ng-click="submit()"
-							value="update" name="post" align="center" />
-					</div>
+					<div class="control-group">
+							<input type="button" class="btn btn-info" ng-click="editUserr()" value=Edit ng-disabled="disableEditButton" ng-init="disableEditButton=false" name="post" align="center" style="color: 0000FF;width: 80px"/>
+							<input type="button" class="btn btn-info" ng-click="submit()" ng-disabled="enableDisableButton" ng-init="enableDisableButton=true" value=Update name="post" align="center" style="color: 0000FF"/>
+							<input type="button" class="btn btn-info" ng-click="cancel()" value=Cancel name="post" align="center" style="color: 0000FF"/>
+							</div>
 		</div>
 		</form>
 	</div>
