--- a/src/main/webapp/searchUser.html
+++ b/src/main/webapp/searchUser.html
@@ -32,11 +32,11 @@
 					<div class="control-group">
 						<label for="name">First Name:</label> <input type="text"
 							name="name" class="form-control" id="name"
-							placeholder="Enter Name" ng-model="user.name" name="name"
+							placeholder="Enter Name" ng-model="user.name" name="name" ng-change="changeEvent()" 
 							required>
 					</div><br>
 					<div class="control-group">
-					<input type="button" class="btn btn-info" ng-click="searchUser()"
+					<input type="button" class="btn btn-info" ng-click="searchUser()" ng-disabled="enableDisbleButton"
 						value="Search" name="get" align="center" />
 						</div>
 				</div>
