--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -38,7 +38,7 @@
 							<div class="control-group"
 								ng-class="{ 'has-error' : createPosition.jobcode.$invalid && !createPosition.jobcode.$pristine }">
 								<label for="jobcode">Job Code :</label> <input type="text" name="jobcode"
-									class="form-control" id="jobcode"
+									class="form-control" id="jobcode" ng-change="changeEvent()" 
 									ng-model="position.jobcode" placeholder="Enter Job Code" required>
 								<span ng-show="createPosition.jobcode.$invalid  && !createPosition.jobcode.$pristine"
 									class="help-block">Job is required.</span>
@@ -47,7 +47,7 @@
 							<div class="control-group"
 								ng-class="{'has-error' :createPosition.experienceRequired.$invalid && !createPosition.experienceRequired.$pristine}">
 								<label for="experienceRequired">Experience Required :</label> <select
-									class="form-control" name="experienceRequired"
+									class="form-control" name="experienceRequired" ng-change="changeEvent()" 
 									ng-model="position.experienceRequired" id="experienceRequired">
 									<option value="1">0-2</option>
 									<option value="2">2-4</option>
@@ -60,7 +60,7 @@
 
 						<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : createPosition.primarySkills.$invalid && !createPosition.primarySkills.$pristine }">
-							<label for="primarySkills">Primary Skills :</label> <input name="primarySkills" class="form-control"
+							<label for="primarySkills">Primary Skills :</label> <input name="primarySkills" ng-change="changeEvent()" class="form-control"
 								id="primarySkills" ng-model="position.primarySkills" placeholder="Enter Primary Skills" required style="color: black"> <span
 								ng-show="createPosition.primarySkills.$invalid  && !createPosition.primarySkills.$pristine"
 								class="help-block" style="font: black">Primary Skills are required.</span>
@@ -69,7 +69,7 @@
 						<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : createPosition.secondarySkills.$invalid && !createPosition.secondarySkills.$pristine }">
 							<label for="secondarySkills">Secondary Skills :</label> <input
-								id="secondarySkills" name="secondarySkills"
+								id="secondarySkills" ng-change="changeEvent()" name="secondarySkills"
 								class="form-control" ng-model="position.secondarySkills"
 								placeholder="Enter Secondary Skills" required> <span
 								ng-show="createPosition.secondarySkills.$invalid  && !createPosition.secondarySkills.$pristine"
@@ -78,7 +78,7 @@
 
 						<div class="control-group" ng-class="{'has-error' :createPosition.noOfPositions.$invalid && !createPosition.noOfPositions.$pristine}">
 								<label for="name">No of Positions :</label> <input
-									type="number" name="noOfPositions" class="form-control"
+									type="number" ng-change="changeEvent()" name="noOfPositions" class="form-control"
 									id="noOfPositions" ng-model="position.noOfPositions"
 									placeholder="Enter No of Positions" ngPattern="1234567890 " ng-maxlength="10" required> 
 								 <span class="help-block" ng-show="createPosition.noOfPositions.$error.required && !createPosition.noOfPositions.$pristine && !createPosition.noOfPositions.$error.number">Numbers should be entered</span>
@@ -87,7 +87,7 @@
 
 							<div class="control-group" ng-class="{'has-error' :createPosition.jobProfile.$invalid && !createPosition.jobProfile.$pristine}">
 								<label for="name">Job Profile :</label>
-								<textarea cols="50" rows="5" class="form-control" name="jobProfile"
+								<textarea cols="50" rows="5" ng-change="changeEvent()" class="form-control" name="jobProfile"
 									id="jobProfile" ng-model="position.jobProfile"
 									placeholder="Enter Job Profile" required></textarea>
 								<span ng-show="createPosition.jobProfile.$invalid  && !createPosition.jobProfile.$pristine"
@@ -95,14 +95,14 @@
 							</div><br>
 							
 							<div class="control-group" ng-class="{'has-error' :createPosition.designation.$invalid && !createPosition.designation.$pristine}">
-								<label for="name">Designation :</label> <input type="text" name="designation"
+								<label for="name">Designation :</label> <input type="text" name="designation" ng-change="changeEvent()" 
 									class="form-control" id="designation" ng-model="position.designation"
 									placeholder="Enter Designation" required>
 								<span ng-show="createPosition.designation.$invalid  && !createPosition.designation.$pristine"
 									class="help-block">Designation is required.</span>
 							</div><br>
 							<div class="control-group">
-							<input type="button" class="btn btn-info" ng-click="submit()" value=Register name="post" align="center" style="color: 0000FF"/>
+							<input type="button" class="btn btn-info" ng-click="submit()" value=Register name="post" align="center" style="color: 0000FF" ng-disabled="enableDisbleButton" />
 							</div>
 					</form>
 					</div>
