--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script
-	src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 <script type="text/javascript" src="js/ng-grid-1.3.2.js"></script>
 <link rel="stylesheet" href="css/ng-grid.css" />
 <script type="text/javascript" src="js/searchPositionController.js"></script>
@@ -31,13 +30,13 @@
 					<h2 class="heading-class">Search for Positions Created based on : </h2><br>
 					<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : searchPosition.designations.$invalid && !searchPosition.designations.$pristine }">
-								<input name="designations" class="form-control"
+								<input name="designations" class="form-control" ng-change="changeEvent()" 
 								id="designations" ng-model="searchPosition.designations" placeholder="Enter Designation" required style="color: black"> <span
 								ng-show="searchPosition.designations.$invalid  && !searchPosition.designations.$pristine"
 								class="help-block" style="font: black">Designation is Required.</span>
 						</div><br>
 					<div class="control-group">
-					<input type="button" class="btn btn-info" ng-click="searchCandidate()"
+					<input type="button" class="btn btn-info" ng-click="searchCandidate()" ng-disabled="enableDisbleButton" 
 						value="Search" name="get" align="center" />
 				</div>
 				</div>
