--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -5,11 +5,12 @@
 
 <title>Create New Position</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="style.css" rel="stylesheet" type="text/css" />
 <!-- CuFon: Enables smooth pretty custom font rendering. 100% SEO friendly. To disable, remove this section -->
-
+<link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.min.css" />
+    <script data-require="angular.js@1.2.x" src="http://code.angularjs.org/1.2.28/angular.js" data-semver="1.2.15"></script>
+    <script src="http://mbenford.github.io/ngTagsInput/js/ng-tags-input.min.js"></script>
 <script type="text/javascript" src="js/createPosition.js"></script>
-<script type="text/javascript" src="js/angular1.2.min.js"></script>
+<!-- <script type="text/javascript" src="js/angular1.2.min.js"></script> -->
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" type="text/css" href="css/template.css">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> 
@@ -22,7 +23,7 @@
 
 
 <body class="login-middile-body">
-	<div ng-app="" ng-controller="positionController">
+	<div ng-app="myApp" ng-controller="positionController">
 		<form action="#" name="createPosition" onvalidate>
 				<div class="pageDiv">
 					<div class=headerDiv>
@@ -58,13 +59,18 @@
 									is required.</span>
 							</div><br>
 
-						<div class="ui-widget control-group"
+						<div class="control-group" >
+						<label for="primarySkills">Primary Skills:</label>
+						<tags-input ng-model="position.primarySkills" class="form-control"  placeholder="Enter Skills"> <auto-complete id="sk"
+							source="loadTags($query)"></auto-complete> </tags-input></div><br>
+						
+						<!-- <div class="ui-widget control-group"
 							ng-class="{ 'has-error' : createPosition.primarySkills.$invalid && !createPosition.primarySkills.$pristine }">
 							<label for="primarySkills">Primary Skills :</label> <input name="primarySkills" ng-change="changeEvent()" class="form-control"
 								id="primarySkills" ng-model="position.primarySkills" placeholder="Enter Primary Skills" required style="color: black"> <span
 								ng-show="createPosition.primarySkills.$invalid  && !createPosition.primarySkills.$pristine"
 								class="help-block" style="font: black">Primary Skills are required.</span>
-						</div><br>
+						</div> --><br>
 
 						<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : createPosition.secondarySkills.$invalid && !createPosition.secondarySkills.$pristine }">
